# etftracker

./: AGENTS.md  README.md  SCHD.csv  SCHG.csv  VTI.csv  main.py  pyproject.toml  requirements.txt  test.csv
docs/superpowers/plans/: 2026-04-01-etftracker-scraper.md
docs/superpowers/specs/: 2026-04-01-etftracker-design.md
etftracker/: __init__.py  cli.py  db.py  etftracker.py  export.py  scraper.py  utils.py
