[project]
name = "etftracker"
version = "0.1.0"
description = "ETF holdings scraper"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "selenium>=4.41.0",
    "lxml>=6.0.2",
    "duckdb>=1.5.1",
]
[project.scripts]
etftracker = "etftracker.cli:main"
yahoors = "etftracker.cli:main"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etftracker*"]
